# StinkOS

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Makefile  README.md  SECURITY.md  arp.c  arp.h  ata.c  ata.h  audio.c  audio.h  boot.s  dhcp.c  dhcp.h  dma.c  dns.h  e1000.c  e1000.h  elf.c  elf.h  fb.c  fb.h  font.c  font.h  fs.c  fs.h  icmp.c  interrupts.c  interrupts_asm.s  io.h  ipv4.c  ipv4.h  kernel.c  keyboard.c  keyboard.h  linker.ld  (+25 more)
.github/: PULL_REQUEST_TEMPLATE.md
apps/: anim.c  app.ld  arrows.c  asteroids.c  beep.c  box.s  breakout.c  cowtest.c  crt0.s  del.c  edit.c  exitcode.c  fault.s  fbdemo.c  fd.c  files.c  game.s  hello.s  hi.c  installer.c  libstink.h  libstink_http.c  libstink_posix.c  libstink_printf.c  libstink_stdio.c  ls.c  mounttest.c  play.c  pong.c  save.c  seek.c  shell.c  snake.c  stinkpkg.c  stinkpkg.h  wxattack.c
apps/rust/libui/: Cargo.toml
apps/rust/libui/src/: lib.rs
apps/rust/rs-about/: Cargo.toml
apps/rust/rs-about/src/: lib.rs
apps/rust/rs-alloc/: Cargo.toml
apps/rust/rs-alloc/src/: lib.rs
apps/rust/rs-hello/: Cargo.toml
apps/rust/rs-hello/src/: lib.rs
boot/: boot.s  bootblock.ld  bootmain.c  context_asm.s  elf32.h  gdt_asm.s  kernel.ld  linker.ld  usermode_asm.s
docs/: ARCHITECTURE.md  MEMORY.md  NETWORK.md  PACKAGING.md  STINKFS.md  SYSCALLS.md  TESTING.md  TUTORIAL.md
kernel/: defs.h  main.c
lib/: libstink.h  libstink_alloc.c  libstink_font.c  libstink_font.h  libstink_gfx.c  libstink_http.h  libstink_math.c  libstink_posix.c  libstink_setjmp.s  libstink_sha256.c  libstink_socket.c  libstink_socket.h  libstink_syms.c  libstink_winbuf.c  libstink_winbuf.h
pages/: index.html  robots.txt  sitemap.xml  style.css
tests/: test_arp_cache.c  test_arp_ratelimit.c  test_arp_storm.c  test_arp_ttl.c  test_audio_mode.c  test_blit_overflow.c  (+58 more)
(+163 files in other folders)
