[package]
name = "rs-about"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
libstink = { path = "../libstink" }
libui    = { path = "../libui"    }

[profile.dev]
panic = "abort"
opt-level = "s"
debug = false
lto = false
codegen-units = 1

[profile.release]
panic = "abort"
opt-level = "s"
debug = false
lto = true
codegen-units = 1
strip = "symbols"
